# home-server-system

./: Cargo.toml  README.md
src/: utils.rs
src/client/: client.rs  client_config.json  main.rs
src/server/: main.rs  server.rs  server_commands.json  server_config.json
